--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 h1 {
@@ -10,4 +11,55 @@ h1 {
 }
 #changeGreetingButton{
     display: none;
+}
+input, select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.container {
+    display: flex;
+    flex-direction: row;
+}
+#inputs,#selectedOptions {
+    border-radius: 5px;
+    padding: 25px;
+    width:40%;
+    margin: 10px;
+    text-align: left;
+}
+p{
+    font-size: 25px;
+}
+button {
+    background-color: #4CAF50;
+    color: white;
+    width: 300px;
+    font-size: 20px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin:20px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+#generatedGreeting {
+    border: 2px solid #ccc;
+    padding: 10px; 
+    margin-left: 40px; 
+    background-color: #f5f5f5;
+    color: #4CAF50; 
+    width: 50%;
+    display: none;
+}
+h1{
+    color: #4CAF50;
+    margin-top: 50px;
 }
